[package]
name = "game-loop"
version = "0.5.0"
authors = ["Chris Patuzzo <chris@patuzzo.co.uk>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tuzz/game-loop"
documentation = "https://github.com/tuzz/game-loop"
homepage = "https://crates.io/crates/game-loop"
description = "A Rust crate that implements a frame-rate-independent game loop."
keywords = ["game", "loop", "frame", "rate", "independent"]
categories = ["game-development", "simulation", "rendering"]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.56"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3.33"
features = [
  "Performance",
  "Window",
]
